--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -507,7 +507,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking number of clusters as 37, we will now fit the "
+    "Taking number of clusters as 37, we will now fit this model and transform the data to cluster data space. Also predict the labels for validation dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.88      1.00      0.94       736\n",
+      "        spam       1.00      0.00      0.00       100\n",
+      "\n",
+      "    accuracy                           0.88       836\n",
+      "   macro avg       0.94      0.50      0.47       836\n",
+      "weighted avg       0.89      0.88      0.82       836\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster_model = KMeans(37).fit(x_train_tf)\n",
+    "x_train_clus = cluster_model.transform(x_train_tf)\n",
+    "rep_class_idx = np.argmin(x_train_clus, axis=0)\n",
+    "x_rep_class = x_train_tf[rep_class_idx]\n",
+    "y_rep_class = np.array(y_train)[rep_class_idx]\n",
+    "\n",
+    "val_clus_pred = cluster_model.predict(x_val_tf)\n",
+    "y_valid_pred = []\n",
+    "for i in val_clus_pred:\n",
+    "    y_valid_pred.append(y_rep_class[i])\n",
+    "\n",
+    "print(classification_report(y_val, y_valid_pred, zero_division=1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting for test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.86      1.00      0.92       720\n",
+      "        spam       1.00      0.00      0.00       117\n",
+      "\n",
+      "    accuracy                           0.86       837\n",
+      "   macro avg       0.93      0.50      0.46       837\n",
+      "weighted avg       0.88      0.86      0.80       837\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_clus_pred = cluster_model.predict(x_test_tf)\n",
+    "y_test_pred = []\n",
+    "for i in test_clus_pred:\n",
+    "    y_test_pred.append(y_rep_class[i])\n",
+    "\n",
+    "print(classification_report(y_test, y_test_pred, zero_division=1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Logistic Regression model performed the best among all three and will be selected for further use on this dataset"
    ]
   }
  ],
