--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "  'wat'])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,44 +180,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Splitting the data into train/validation/test datasets"
+    "Defining a function to save the labels and words as a csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3901 836 837\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_per = 0.15\n",
-    "val_per = 0.15\n",
-    "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(sms_words, sms_labels, test_size=test_per, shuffle=True)\n",
-    "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(x_train, y_train, test_size=val_per/(1-test_per), shuffle=True)\n",
-    "\n",
-    "print(len(x_train), len(x_val), len(x_test))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Saving each dataset as a csv file with the first word on each line being the label for that datapoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,14 +204,256 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining all the above preprocessing steps into one function to save a raw_data.csv file from the given text file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_csv(\"../data/train_data.csv\", x_train, y_train)\n",
-    "save_csv(\"../data/val_data.csv\", x_val, y_val)\n",
-    "save_csv(\"../data/test_data.csv\", x_test, y_test)"
+    "def get_csv_from_txt(file_path):\n",
+    "    data_file = open(file_path)\n",
+    "    sms_data_list = data_file.readlines()\n",
+    "    sms_labelled_data = [[i.split(\"\\t\")[0], i.split(\"\\t\")[1].split(\"\\n\")[0]] for i in sms_data_list]\n",
+    "\n",
+    "    sms_labels = []\n",
+    "    sms_words = []\n",
+    "\n",
+    "    for item in sms_labelled_data:\n",
+    "        word_list = get_tokenized_sms(item[1])\n",
+    "\n",
+    "        sms_labels.append(item[0])\n",
+    "        sms_words.append(word_list)\n",
+    "\n",
+    "    save_csv(\"../data/raw_data.csv\", sms_words, sms_labels)\n",
+    "\n",
+    "    return sms_labels, sms_words\n",
+    "\n",
+    "sms_labels, sms_words = get_csv_from_txt(\"../data/SMSSpamCollection\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading the raw_data into lists"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining a function to load data from csv to lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_list_from_csv(file_path):\n",
+    "    with open(file_path, newline='') as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        sms_words = list(reader)\n",
+    "\n",
+    "    sms_labels = [x[0] for x in sms_words]\n",
+    "\n",
+    "    for x in sms_words:\n",
+    "        del x[0]\n",
+    "\n",
+    "    return sms_labels, sms_words"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Splitting the data into train/validation/test datasets"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining a function to split data into train/val/test sets and saving as csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_val_test_split(data_x, data_y, val_per, test_per, tr_path, val_path, te_path, random_seed):\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=test_per, shuffle=True, random_state=random_seed)\n",
+    "\n",
+    "    x_train, x_val, y_train, y_val = train_test_split(x_train, y_train, test_size=val_per/(1-test_per), shuffle=True, random_state=random_seed)\n",
+    "\n",
+    "    save_csv(tr_path, x_train, y_train)\n",
+    "    save_csv(val_path, x_val, y_val)\n",
+    "    save_csv(te_path, x_test, y_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining file paths for train/val/test csv files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_path = \"../data/train_data.csv\"\n",
+    "val_path = \"../data/val_data.csv\"\n",
+    "test_path = \"../data/test_data.csv\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Splitting data using random seed 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_val_test_split(sms_words, sms_labels, 0.15, 0.15, train_path, val_path, test_path, 42)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tracking the split csv using dvc"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialising dvc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized DVC repository.\n",
+      "\n",
+      "You can now commit the changes to git.\n",
+      "\n",
+      "\u001b[31m+---------------------------------------------------------------------+\n",
+      "\u001b[0m\u001b[31m|\u001b[0m                                                                     \u001b[31m|\u001b[0m\n",
+      "\u001b[31m|\u001b[0m        DVC has enabled anonymous aggregate usage analytics.         \u001b[31m|\u001b[0m\n",
+      "\u001b[31m|\u001b[0m     Read the analytics documentation (and how to opt-out) here:     \u001b[31m|\u001b[0m\n",
+      "\u001b[31m|\u001b[0m             <\u001b[36mhttps://dvc.org/doc/user-guide/analytics\u001b[39m>              \u001b[31m|\u001b[0m\n",
+      "\u001b[31m|\u001b[0m                                                                     \u001b[31m|\u001b[0m\n",
+      "\u001b[31m+---------------------------------------------------------------------+\n",
+      "\u001b[0m\n",
+      "\u001b[33mWhat's next?\u001b[39m\n",
+      "\u001b[33m------------\u001b[39m\n",
+      "- Check out the documentation: <\u001b[36mhttps://dvc.org/doc\u001b[39m>\n",
+      "- Get help and share ideas: <\u001b[36mhttps://dvc.org/chat\u001b[39m>\n",
+      "- Star us on GitHub: <\u001b[36mhttps://github.com/iterative/dvc\u001b[39m>\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!cd .. && dvc init"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add all three csv files to dvc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2K\u001b[32m⠋\u001b[0m Checking graph                                                   \u001b[32m⠋\u001b[0m Checking graph\n",
+      "Adding...                                                                       \n",
+      "\u001b[31mERROR\u001b[39m:  output '../data/train_data.csv' is already tracked by SCM (e.g. Git).\n",
+      "    You can remove it from Git, then add to DVC.\n",
+      "        To stop tracking from Git:\n",
+      "            git rm -r --cached '../data/train_data.csv'\n",
+      "            git commit -m \"stop tracking ../data/train_data.csv\" \n",
+      "\u001b[?25l                                                                          \u001b[32m⠋\u001b[0m Checking graph\n",
+      "Adding...                                                                       \n",
+      "\u001b[31mERROR\u001b[39m:  output '../data/val_data.csv' is already tracked by SCM (e.g. Git).\n",
+      "    You can remove it from Git, then add to DVC.\n",
+      "        To stop tracking from Git:\n",
+      "            git rm -r --cached '../data/val_data.csv'\n",
+      "            git commit -m \"stop tracking ../data/val_data.csv\" \n",
+      "\u001b[?25l                                                                          \u001b[32m⠋\u001b[0m Checking graph\n",
+      "Adding...                                                                       \n",
+      "\u001b[31mERROR\u001b[39m:  output '../data/test_data.csv' is already tracked by SCM (e.g. Git).\n",
+      "    You can remove it from Git, then add to DVC.\n",
+      "        To stop tracking from Git:\n",
+      "            git rm -r --cached '../data/test_data.csv'\n",
+      "            git commit -m \"stop tracking ../data/test_data.csv\" \n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc add ../data/train_data.csv\n",
+    "!dvc add ../data/val_data.csv\n",
+    "!dvc add ../data/test_data.csv"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding google drive folder as a remote data storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !cd .. && dvc remote add --default myremote gdrive://1MypipdcBtjmYnO3OQQmLxKM3SWfwmE2p"
    ]
   }
  ],
@@ -263,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
