--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "  'wat'])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -401,34 +401,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[?25l                                                                          \u001b[32m⠋\u001b[0m Checking graph\n",
+      "Adding...                                                                       \n",
+      "!\u001b[A\n",
+      "  0% Checking cache in '/mnt/vol_d/VSCode_Workspace/cmi_applied_ml/.dvc/cache'| \u001b[A\n",
+      "                                                                                \u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |Transferring                          0/? [00:00<?,     ?file/s]\u001b[A\n",
+      "  0%|          |Transferring                          0/1 [00:00<?,     ?file/s]\u001b[A\n",
+      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 12.65file/s]\u001b[A\n",
+      "\n",
+      "To track the changes with git, run:\n",
+      "\n",
+      "\tgit add ../data/train_data.csv.dvc ../data/.gitignore\n",
+      "\n",
+      "To enable auto staging, run:\n",
+      "\n",
+      "\tdvc config core.autostage true\n",
       "\u001b[2K\u001b[32m⠋\u001b[0m Checking graph                                                   \u001b[32m⠋\u001b[0m Checking graph\n",
       "Adding...                                                                       \n",
-      "\u001b[31mERROR\u001b[39m:  output '../data/train_data.csv' is already tracked by SCM (e.g. Git).\n",
-      "    You can remove it from Git, then add to DVC.\n",
-      "        To stop tracking from Git:\n",
-      "            git rm -r --cached '../data/train_data.csv'\n",
-      "            git commit -m \"stop tracking ../data/train_data.csv\" \n",
-      "\u001b[?25l                                                                          \u001b[32m⠋\u001b[0m Checking graph\n",
+      "!\u001b[A\n",
+      "  0% Checking cache in '/mnt/vol_d/VSCode_Workspace/cmi_applied_ml/.dvc/cache'| \u001b[A\n",
+      "                                                                                \u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |Transferring                          0/? [00:00<?,     ?file/s]\u001b[A\n",
+      "  0%|          |Transferring                          0/1 [00:00<?,     ?file/s]\u001b[A\n",
+      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 23.58file/s]\u001b[A\n",
+      "\n",
+      "To track the changes with git, run:\n",
+      "\n",
+      "\tgit add ../data/val_data.csv.dvc ../data/.gitignore\n",
+      "\n",
+      "To enable auto staging, run:\n",
+      "\n",
+      "\tdvc config core.autostage true\n",
+      "\u001b[2K\u001b[32m⠋\u001b[0m Checking graph                                                   \u001b[32m⠋\u001b[0m Checking graph\n",
       "Adding...                                                                       \n",
-      "\u001b[31mERROR\u001b[39m:  output '../data/val_data.csv' is already tracked by SCM (e.g. Git).\n",
-      "    You can remove it from Git, then add to DVC.\n",
-      "        To stop tracking from Git:\n",
-      "            git rm -r --cached '../data/val_data.csv'\n",
-      "            git commit -m \"stop tracking ../data/val_data.csv\" \n",
-      "\u001b[?25l                                                                          \u001b[32m⠋\u001b[0m Checking graph\n",
-      "Adding...                                                                       \n",
-      "\u001b[31mERROR\u001b[39m:  output '../data/test_data.csv' is already tracked by SCM (e.g. Git).\n",
-      "    You can remove it from Git, then add to DVC.\n",
-      "        To stop tracking from Git:\n",
-      "            git rm -r --cached '../data/test_data.csv'\n",
-      "            git commit -m \"stop tracking ../data/test_data.csv\" \n",
+      "!\u001b[A\n",
+      "  0% Checking cache in '/mnt/vol_d/VSCode_Workspace/cmi_applied_ml/.dvc/cache'| \u001b[A\n",
+      "                                                                                \u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |Transferring                          0/? [00:00<?,     ?file/s]\u001b[A\n",
+      "  0%|          |Transferring                          0/1 [00:00<?,     ?file/s]\u001b[A\n",
+      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 23.06file/s]\u001b[A\n",
+      "\n",
+      "To track the changes with git, run:\n",
+      "\n",
+      "\tgit add ../data/test_data.csv.dvc ../data/.gitignore\n",
+      "\n",
+      "To enable auto staging, run:\n",
+      "\n",
+      "\tdvc config core.autostage true\n",
       "\u001b[0m"
      ]
     }
@@ -437,6 +467,23 @@
     "!dvc add ../data/train_data.csv\n",
     "!dvc add ../data/val_data.csv\n",
     "!dvc add ../data/test_data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc config core.autostage true"
    ]
   },
   {
@@ -449,11 +496,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting 'myremote' as a default remote.\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "# !cd .. && dvc remote add --default myremote gdrive://1MypipdcBtjmYnO3OQQmLxKM3SWfwmE2p"
+    "!cd .. && dvc remote add --default myremote gdrive://1MypipdcBtjmYnO3OQQmLxKM3SWfwmE2p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc remote modify myremote gdrive_acknowledge_abuse true"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pushing dvc tracked files to remote storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0% Checking cache in '1MypipdcBtjmYnO3OQQmLxKM3SWfwmE2p'| |0/? [00:00<?,    ?f/home/rohan/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/oauth2client/_helpers.py:255: UserWarning: Cannot access /home/rohan/.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/default.json: No such file or directory\n",
+      "  warnings.warn(_MISSING_FILE_MESSAGE.format(filename))\n",
+      "Your browser has been opened to visit:\n",
+      "\n",
+      "    https://accounts.google.com/o/oauth2/auth?client_id=710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.appdata&access_type=offline&response_type=code&approval_prompt=force\n",
+      "\n",
+      "Authentication successful.\n",
+      "  0% Transferring|                                   |0/3 [00:00<?,     ?file/s]\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/45.8k [00:00<?,        ?B/s]\u001b[A\n",
+      " 33% Transferring|██████████▎                    |1/3 [00:03<00:07,  3.93s/file]\u001b[A\n",
+      "                                                                                \u001b[A\n",
+      "!\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_0.00/205k [00:00<?,        ?B/s]\u001b[A\n",
+      "\n",
+      "!\u001b[A\u001b[A\n",
+      "\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\u001b[A\n",
+      "\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/44.6k [00:00<?,        ?B/s]\u001b[A\u001b[A\n",
+      "  4%|▍         |/mnt/vol_d/VSCode_Workspace8.00k/205k [00:02<01:00,    3.31kB/s]\u001b[A\n",
+      "\n",
+      " 67% Transferring|████████████████████▋          |2/3 [00:08<00:04,  4.10s/file]\u001b[A\u001b[A\n",
+      "100% Transferring|███████████████████████████████|3/3 [00:09<00:00,  2.70s/file]\u001b[A\n",
+      "\n",
+      "3 files pushed                                                                  \u001b[A\u001b[A\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!dvc push"
    ]
   }
  ],
