--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,6 +580,49 @@
    ],
    "source": [
     "!dvc push"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Splitting again using a different random seed (37)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_val_test_split(sms_words, sms_labels, 0.15, 0.15, train_path, val_path, test_path, 37)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking out both the versions of split files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Everything is up to date.                                                       \n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "# !dvc push"
    ]
   }
  ],
