--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "  'wat'])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
       "!\u001b[A\n",
       "  0%|          |Transferring                          0/? [00:00<?,     ?file/s]\u001b[A\n",
       "  0%|          |Transferring                          0/1 [00:00<?,     ?file/s]\u001b[A\n",
-      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 12.65file/s]\u001b[A\n",
+      "100% Adding...|████████████████████████████████████████|1/1 [00:00,  7.73file/s]\u001b[A\n",
       "\n",
       "To track the changes with git, run:\n",
       "\n",
@@ -433,7 +433,7 @@
       "!\u001b[A\n",
       "  0%|          |Transferring                          0/? [00:00<?,     ?file/s]\u001b[A\n",
       "  0%|          |Transferring                          0/1 [00:00<?,     ?file/s]\u001b[A\n",
-      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 23.58file/s]\u001b[A\n",
+      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 20.56file/s]\u001b[A\n",
       "\n",
       "To track the changes with git, run:\n",
       "\n",
@@ -450,11 +450,11 @@
       "!\u001b[A\n",
       "  0%|          |Transferring                          0/? [00:00<?,     ?file/s]\u001b[A\n",
       "  0%|          |Transferring                          0/1 [00:00<?,     ?file/s]\u001b[A\n",
-      "100% Adding...|████████████████████████████████████████|1/1 [00:00, 23.06file/s]\u001b[A\n",
+      "100% Adding...|████████████████████████████████████████|1/1 [00:00,  9.29file/s]\u001b[A\n",
       "\n",
       "To track the changes with git, run:\n",
       "\n",
-      "\tgit add ../data/test_data.csv.dvc ../data/.gitignore\n",
+      "\tgit add ../data/.gitignore ../data/test_data.csv.dvc\n",
       "\n",
       "To enable auto staging, run:\n",
       "\n",
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -539,39 +539,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0% Checking cache in '1MypipdcBtjmYnO3OQQmLxKM3SWfwmE2p'| |0/? [00:00<?,    ?f/home/rohan/anaconda3/envs/env_cmi_all/lib/python3.9/site-packages/oauth2client/_helpers.py:255: UserWarning: Cannot access /home/rohan/.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/default.json: No such file or directory\n",
-      "  warnings.warn(_MISSING_FILE_MESSAGE.format(filename))\n",
-      "Your browser has been opened to visit:\n",
-      "\n",
-      "    https://accounts.google.com/o/oauth2/auth?client_id=710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.appdata&access_type=offline&response_type=code&approval_prompt=force\n",
-      "\n",
-      "Authentication successful.\n",
       "  0% Transferring|                                   |0/3 [00:00<?,     ?file/s]\n",
       "!\u001b[A\n",
       "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
-      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/45.8k [00:00<?,        ?B/s]\u001b[A\n",
-      " 33% Transferring|██████████▎                    |1/3 [00:03<00:07,  3.93s/file]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_0.00/205k [00:00<?,        ?B/s]\u001b[A\n",
+      " 33% Transferring|██████████▎                    |1/3 [00:03<00:07,  3.91s/file]\u001b[A\n",
       "                                                                                \u001b[A\n",
       "!\u001b[A\n",
       "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\n",
-      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_0.00/205k [00:00<?,        ?B/s]\u001b[A\n",
-      "\n",
-      "!\u001b[A\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/44.6k [00:00<?,        ?B/s]\u001b[A\n",
       "\n",
       "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi_app0.00/? [00:00<?,        ?B/s]\u001b[A\u001b[A\n",
       "\n",
-      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/44.6k [00:00<?,        ?B/s]\u001b[A\u001b[A\n",
-      "  4%|▍         |/mnt/vol_d/VSCode_Workspace8.00k/205k [00:02<01:00,    3.31kB/s]\u001b[A\n",
+      "  0%|          |/mnt/vol_d/VSCode_Workspace/cmi0.00/45.8k [00:00<?,        ?B/s]\u001b[A\u001b[A\n",
+      " 18%|█▊        |/mnt/vol_d/VSCode_Workspac8.00k/44.6k [00:02<00:10,    3.65kB/s]\u001b[A\n",
       "\n",
-      " 67% Transferring|████████████████████▋          |2/3 [00:08<00:04,  4.10s/file]\u001b[A\u001b[A\n",
-      "100% Transferring|███████████████████████████████|3/3 [00:09<00:00,  2.70s/file]\u001b[A\n",
+      " 67% Transferring|████████████████████▋          |2/3 [00:07<00:03,  3.81s/file]\u001b[A\u001b[A\n",
+      "100% Transferring|███████████████████████████████|3/3 [00:08<00:00,  2.51s/file]\u001b[A\n",
       "\n",
       "3 files pushed                                                                  \u001b[A\u001b[A\n",
       "\u001b[0m"
@@ -592,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,18 +600,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Everything is up to date.                                                       \n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !dvc push"
    ]
