--- a/src/prepare.ipynb
+++ b/src/prepare.ipynb
@@ -585,11 +585,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_val_test_split(sms_words, sms_labels, 0.15, 0.15, train_path, val_path, test_path, 37)"
+    "train_val_test_split(sms_words, sms_labels, 0.15, 0.15, train_path, val_path, test_path, 37)"
    ]
   },
   {
@@ -597,16 +597,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking out both the versions of split files"
+    "Tracking changes and commiting changes in dvc (commiting was done in terminal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/test_data.csv.dvc:                                            core\u001b[39m>\n",
+      "\tchanged outs:\n",
+      "\t\tmodified:           ../data/test_data.csv\n",
+      "../data/train_data.csv.dvc:\n",
+      "\tchanged outs:\n",
+      "\t\tmodified:           ../data/train_data.csv\n",
+      "../data/val_data.csv.dvc:\n",
+      "\tchanged outs:\n",
+      "\t\tmodified:           ../data/val_data.csv\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "# !dvc push"
+    "!dvc status"
    ]
   }
  ],
